First push to github New files added - [emailService] Files modified - [footer,mainpage,pom.xml,project-services.xml]

--- a/src/main/webapp/pages/footer/footer.html
+++ b/src/main/webapp/pages/footer/footer.html
@@ -2,10 +2,10 @@
     <wm-layoutgrid height="auto" name="footerlayout">
         <wm-gridrow name="footerrow">
             <wm-gridcolumn name="footerleft" verticalalign="bottom">
-                <wm-label caption="Powered by WaveMaker" textalign="left" name="poweredby"></wm-label>
+                <wm-label caption="Technology Advisory Services - x5206" textalign="left" name="poweredby"></wm-label>
             </wm-gridcolumn>
             <wm-gridcolumn horizontalalign="right" verticalalign="bottom" name="footerright">
-                <wm-label caption="Copyright 2017 [company name]" textalign="right" name="copyright"></wm-label>
+                <wm-label caption="Copyright 2019 - Crowe Mackay LLP" textalign="right" name="copyright"></wm-label>
             </wm-gridcolumn>
         </wm-gridrow>
     </wm-layoutgrid>
