--- a/src/main/webapp/pages/mainpage/mainpage.html
+++ b/src/main/webapp/pages/mainpage/mainpage.html
@@ -327,7 +327,132 @@
                         </wm-tabpane>
                     </wm-tabs>
                 </wm-tabpane>
-                <wm-tabpane name="tabpane3" title="New Project" show="false"></wm-tabpane>
+                <wm-tabpane name="tabpane3" title="New Project" show="true">
+                    <wm-form errormessage="" captionposition="top" title="Form" enctype="application/x-www-form-urlencoded" method="post" dataset="bind:Variables.CmtaxprojectsCreateProjects.dataSet" captionalign="left" name="createProjectsForm1">
+                        <wm-layoutgrid columns="3" name="layoutgrid4_1">
+                            <wm-gridrow name="gridrow25">
+                                <wm-composite name="composite1">
+                                    <wm-label class="h4 control-label" caption="Projects Details" name="label1"></wm-label>
+                                </wm-composite>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow26">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn41_1">
+                                    <wm-form-field readonly="false" name="Projects_clients" displayname="Clients" key="Projects.clients" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn42_1">
+                                    <wm-form-field readonly="false" name="Projects_offices" displayname="Offices" key="Projects.offices" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn43_1">
+                                    <wm-form-field readonly="false" name="Projects_workstatus" displayname="Workstatus" key="Projects.workstatus" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow27">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn44_1">
+                                    <wm-form-field readonly="false" name="Projects_receiveddate" displayname="Receiveddate" key="Projects.receiveddate" type="date" show="true" widget="date"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn45_1"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn46_1"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow35">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn69">
+                                    <wm-form-field readonly="false" name="Projects_usersByPreparerid" displayname="Users By Preparerid" key="Projects.usersByPreparerid" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn68">
+                                    <wm-form-field readonly="false" name="Projects_usersByPartnerid" displayname="Users By Partnerid" key="Projects.usersByPartnerid" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn70">
+                                    <wm-form-field readonly="false" name="Projects_usersByReviewerid" displayname="Users By Reviewerid" key="Projects.usersByReviewerid" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow28_1">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn47_1">
+                                    <wm-form-field readonly="false" name="Projects__1040" displayname="1040" key="Projects._1040" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn48_1">
+                                    <wm-form-field readonly="false" name="Projects__3520" displayname="3520" key="Projects._3520" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn49">
+                                    <wm-form-field readonly="false" name="Projects__3520a" displayname="3520A" key="Projects._3520a" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow29_1">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn50">
+                                    <wm-form-field readonly="false" name="Projects_fbar" displayname="Fbar" key="Projects.fbar" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn51">
+                                    <wm-form-field readonly="false" name="Projects_statereturn" displayname="Statereturn" key="Projects.statereturn" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn52">
+                                    <wm-form-field readonly="false" name="Projects_t1" displayname="T1" key="Projects.t1" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow30_1">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn53">
+                                    <wm-form-field readonly="false" name="Projects_comments" displayname="Comments" key="Projects.comments" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn54">
+                                    <wm-form-field readonly="false" name="Projects_description" displayname="Description" key="Projects.description" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn55"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow31_1">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn56">
+                                    <wm-form-field readonly="false" name="Projects_prepareddate" displayname="Prepareddate" key="Projects.prepareddate" type="date" show="true" widget="date"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn57"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn58"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow32_1">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn59">
+                                    <wm-form-field readonly="false" name="Projects_revieweddate" displayname="Revieweddate" key="Projects.revieweddate" type="date" show="true" widget="date"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn60">
+                                    <wm-form-field readonly="false" name="Projects_usersByDispatcherid" displayname="Users By Dispatcherid" key="Projects.usersByDispatcherid" type="list" show="true" widget="select"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn61"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow33">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn62">
+                                    <wm-form-field readonly="false" name="Projects_efileeligible" displayname="Efileeligible" key="Projects.efileeligible" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn63">
+                                    <wm-form-field readonly="false" name="Projects_efileformreceived" displayname="Efileformreceived" key="Projects.efileformreceived" type="date" show="true" widget="date"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn64"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow34">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn65">
+                                    <wm-form-field readonly="false" name="Projects_completeddate" displayname="Completeddate" key="Projects.completeddate" type="date" show="true" widget="date"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn66"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn67"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow36">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn71">
+                                    <wm-form-field readonly="false" name="Projects_billed" displayname="Billed" key="Projects.billed" type="string" show="true" widget="text"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn72">
+                                    <wm-form-field readonly="false" name="Projects_fees" displayname="Fees" key="Projects.fees" type="double" show="true" widget="number"></wm-form-field>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn73"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow37">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn74"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn75"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn76"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow38">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn77_1"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn78_1"></wm-gridcolumn>
+                            </wm-gridrow>
+                        </wm-layoutgrid>
+                        <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
+                            <wm-button caption="Reset" type="reset" class="btn-secondary" name="button1"></wm-button>
+                            <wm-button caption="Cancel" type="button" class="btn-warning" name="button2"></wm-button>
+                            <wm-button caption="Save" type="submit" class="btn-primary" name="button3"></wm-button>
+                        </wm-buttongroup>
+                    </wm-form>
+                </wm-tabpane>
             </wm-tabs>
         </wm-page-content>
     </wm-content>
