Commit 2 Files modified - [header,mainpage,cmtaxprojects,emailService]

--- a/src/main/webapp/pages/header/header.html
+++ b/src/main/webapp/pages/header/header.html
@@ -3,7 +3,7 @@
         <wm-gridrow name="headerrow">
             <wm-gridcolumn name="headerleft" verticalalign="middle" columnwidth="7">
                 <wm-picture picturesource="resources/images/imagelists/logo-mackay-new.png" name="AppLogo" margin="unset unset unset 5px" backgroundattachment="fixed" backgroundrepeat="no-repeat" width="120"></wm-picture>
-                <wm-label caption="Tax Projects Management" class="application-name" name="AppName" fontsize="20" padding="unset unset unset 20px" margin="unset unset unset 40%" borderwidth="15px unset unset unset" fontweight="bold" fontunit="px"></wm-label>
+                <wm-label caption="Tax Projects" class="application-name" name="AppName" fontsize="20" padding="unset unset unset 20px" margin="unset unset unset 40%" borderwidth="15px unset unset unset" fontweight="bold" fontunit="px"></wm-label>
             </wm-gridcolumn>
             <wm-gridcolumn name="headerright" horizontalalign="right" verticalalign="middle" columnwidth="5" padding="1em 1em unset unset">
                 <wm-search name="siteSearch" dataset="Home, Services, Products, About US, Contact" show="false"></wm-search>
