--- a/src/main/webapp/pages/mainpage/mainpage.html
+++ b/src/main/webapp/pages/mainpage/mainpage.html
@@ -13,6 +13,7 @@
                                     show="true"></wm-table-column>
                                 <wm-table-column binding="offices.officename" caption="Office" width="120px" primary-key="false" edit-widget-type="text" related-entity-name="Offices" type="string" generator="assigned" readonly="true"
                                     show="true"></wm-table-column>
+                                <wm-table-column binding="workstatus.status" caption="Status" primary-key="false" edit-widget-type="text" related-entity-name="Workstatus" type="string" generator="assigned" readonly="true" show="true"></wm-table-column>
                                 <wm-table-column binding="receiveddate" caption="Date received" width="100px" primary-key="false" edit-widget-type="date" type="date" generator="assigned" datepattern="yyyy-MM-dd" formatpattern="toDate"
                                     show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="duedate" caption="Date due" width="100px" primary-key="false" edit-widget-type="date" type="date" generator="assigned" show="true" readonly="false"></wm-table-column>
@@ -20,15 +21,16 @@
                                     show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="usersByPreparerid.empname" caption="Preparer" width="120px" primary-key="false" edit-widget-type="text" related-entity-name="Users" type="string" generator="assigned" readonly="true"
                                     show="true"></wm-table-column>
-                                <wm-table-column binding="t1" caption="T1" width="40px" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
+                                <wm-table-column binding="t1" caption="T1" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="usforms" caption="US Forms" width="120px" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="rowOperations" caption="Actions" width="120px" edit-widget-type="text" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-table-column>
-                                <wm-table-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false" widget-type="button" position="header"></wm-table-action>
+                                <wm-table-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow();Variables.getProjectId_var.invoke();Variables.insertWorkflowLog_var.invoke()"
+                                    shortcutkey="" disabled="false" widget-type="button" position="header"></wm-table-action>
                                 <wm-table-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-table-row-action>
                                 <wm-table-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-table-row-action>
                             </wm-table>
                             <wm-liveform errormessage="" title="Projects Info" formlayout="dialog" iconclass="wi wi-edit" name="ProjectsLiveForm2" dataset="bind:Variables.CmtaxprojectsProjectsData.dataSet" captionalign="left" captionposition="top" formdata="bind:Variables.defaultStatus_var.dataSet"
-                                on-beforeservicecall="Variables.updateColumnUSforms_var.invoke()">
+                                on-success="Variables.updateColumnUSforms_var.invoke()" on-beforeservicecall="Variables.updateColumnUSforms_var.invoke()">
                                 <wm-layoutgrid columns="2" name="layoutgrid7">
                                     <wm-gridrow name="gridrow43">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn77">
@@ -183,7 +185,9 @@
                                 <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" period="false" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number"
                                     placeholder="Enter value"></wm-form-field>
                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" action="" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" action="Variables.getProjectId_var.invoke();Variables.updateColumnUSforms_var.invoke();Variables.insertWorkflowLog_var.invoke()"
+                                    disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                <wm-form-action key="new" display-name="New" show="true" class="form-new btn-success" iconclass="wi wi-plus" title="New" action="new()" shortcutkey="" disabled="false" type="button" update-mode="false"></wm-form-action>
                             </wm-liveform>
                         </wm-livetable>
                     </wm-container>
@@ -312,13 +316,49 @@
                         </wm-tabpane>
                     </wm-tabs>
                 </wm-tabpane>
-                <wm-tabpane name="tabpane3" title="New Project" show="true">
-                    <wm-table name="executeFormsTable1" title="" dataset="bind:Variables.listofforms_var.dataSet" navigation="Pager">
-                        <wm-table-column binding="usforms" caption="Usforms" pcdisplay="true" mobiledisplay="true" type="string"></wm-table-column>
-                        <wm-table-column binding="canadaianforms" caption="Canadaianforms" pcdisplay="true" mobiledisplay="true" type="string"></wm-table-column>
-                        <wm-table-column binding="id" caption="Id" pcdisplay="true" mobiledisplay="true" type="integer"></wm-table-column>
-                    </wm-table>
+                <wm-tabpane name="tabpane3" title="Admin" show="false">
+                    <wm-form errormessage="" captionposition="top" title="Form" enctype="application/x-www-form-urlencoded" method="put" dataset="bind:Variables.CmtaxprojectsEditUsers.dataSet" captionalign="left" name="editUsersForm1">
+                        <wm-layoutgrid columns="1" name="layoutgrid3">
+                            <wm-gridrow name="gridrow20">
+                                <wm-composite name="composite1">
+                                    <wm-label class="h4 control-label" caption="Users Details" name="label1"></wm-label>
+                                </wm-composite>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow21">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn39_1">
+                                    <wm-form-field name="Users_username" key="Users.username" type="string" displayname="Username" widget="text" show="true"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow22">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn40_1">
+                                    <wm-form-field name="Users_empname" readonly="false" displayname="Empname" key="Users.empname" type="string" show="true" widget="text" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow23">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn41_1">
+                                    <wm-form-field name="Users_email" readonly="false" displayname="Email" key="Users.email" type="string" show="true" widget="text" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow24">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn42_1">
+                                    <wm-form-field name="Users_phone" readonly="false" displayname="Phone" key="Users.phone" type="string" show="true" widget="text" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow1">
+                                <wm-gridcolumn name="gridcolumn1" columnwidth="12">
+                                    <wm-form-field displayname="Password" widget="text" show="true" type="custom" name="form_field52"></wm-form-field>
+                                    <wm-form-field name="Users_password" readonly="false" displayname="Confirm Password" key="Users.password" type="string" show="true" widget="password" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                        </wm-layoutgrid>
+                        <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
+                            <wm-button caption="Reset" type="reset" class="btn-secondary" name="button1"></wm-button>
+                            <wm-button caption="Cancel" type="button" class="btn-warning" name="button2"></wm-button>
+                            <wm-button caption="Save" type="submit" class="btn-primary" name="button3"></wm-button>
+                        </wm-buttongroup>
+                    </wm-form>
                 </wm-tabpane>
+                <wm-tabpane name="tabpane10" show="false" disabled="true"></wm-tabpane>
             </wm-tabs>
         </wm-page-content>
     </wm-content>
