--- a/src/main/webapp/pages/mainpage/mainpage.html
+++ b/src/main/webapp/pages/mainpage/mainpage.html
@@ -40,8 +40,8 @@
                                     show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="usersByPreparerid.empname" caption="Preparer" width="120px" primary-key="false" edit-widget-type="text" related-entity-name="Users" type="string" generator="assigned" readonly="true"
                                     show="true"></wm-table-column>
-                                <wm-table-column binding="t1" caption="T1" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
-                                <wm-table-column binding="usforms" caption="US Forms" width="120px" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
+                                <wm-table-column binding="t1" caption="T1" width="60px" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
+                                <wm-table-column binding="usforms" caption="US Forms" width="180px" primary-key="false" edit-widget-type="text" type="string" generator="assigned" show="true" readonly="false"></wm-table-column>
                                 <wm-table-column binding="rowOperations" caption="Actions" width="120px" edit-widget-type="text" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-table-column>
                                 <wm-table-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow();Variables.getProjectId_var.invoke();Variables.insertWorkflowLog_var.invoke()"
                                     shortcutkey="" disabled="false" widget-type="button" position="header"></wm-table-action>
